# ai-invention-7ae548-efficiency-at-a-cost-applying-the-margin

./: README.md
chat/: README.md
chat/messages/: README.md
chat/messages/1_create_idea/round_1/: 1_gen_hypo.md  2_review_hypo.md
chat/messages/2_test_idea/round_1/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
chat/messages/2_test_idea/round_2/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
chat/messages/3_report_results/1_gen_viz/: gen_viz_1.md  gen_viz_2.md  gen_viz_3.md
chat/messages/3_report_results/2_gen_demo_art/: gen_demo_art_dataset_1.md  gen_demo_art_evaluation_1.md  gen_demo_art_evaluation_2.md  gen_demo_art_experiment_1.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .terminal_claude_agent_struct_out.json  data.py  dataset_stats.json  full_data_out.json  mini_data_out.json  preview_data_out.json  process_qasper.py
round-1/evaluation-1/: README.md
round-1/evaluation-1/demo/: eval_code_demo.ipynb  mini_demo_data.json
round-1/evaluation-1/src/: .terminal_claude_agent_struct_out.json  eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/evaluation-1/: README.md
round-2/evaluation-1/demo/: eval_code_demo.ipynb  mini_demo_data.json
round-2/evaluation-1/src/: .terminal_claude_agent_struct_out.json  eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
(+37 files in other folders)
