[project]
name = "mvt-rag-evaluation"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.14.2",
    "certifi==2026.6.17",
    "click==8.4.2",
    "distro==1.9.0",
    "filelock==3.31.0",
    "fsspec==2026.6.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.24.0",
    "idna==3.18",
    "jinja2==3.1.6",
    "jiter==0.16.0",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.5.1",
    "openai==2.46.0",
    "packaging==26.2",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "pyyaml==6.0.3",
    "rank-bm25==0.2.2",
    "regex==2026.7.10",
    "rich==15.0.0",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "sentence-transformers==5.6.0",
    "setuptools==83.0.0",
    "sniffio==1.3.1",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.13.0",
    "tqdm==4.69.0",
    "transformers==5.14.1",
    "typer==0.27.0",
    "typing-extensions==4.16.0",
    "typing-inspection==0.4.2",
]
