[project]
name = "mvt-rag-experiment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.14.1",
    "datasets==2.19.0",
    "filelock==3.31.0",
    "frozenlist==1.8.0",
    "fsspec==2024.3.1",
    "huggingface_hub==1.24.0",
    "loguru==0.7.3",
    "multidict==6.7.1",
    "multiprocess==0.70.16",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "psutil==7.2.2",
    "pyarrow==25.0.0",
    "rank-bm25==0.2.2",
    "requests==2.34.2",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "sentence-transformers==5.6.0",
    "tokenizers==0.22.2",
    "torch==2.13.0",
    "tqdm==4.69.0",
    "transformers==5.14.1",
]
